--- a/_posts/ja/2025/06/2025-06-25-hello.md
+++ b/_posts/ja/2025/06/2025-06-25-hello.md
@@ -11,4 +11,10 @@ tags: []
 published: true
 ---
 
-こんにちは。これはテストです。ミスったので更新しました。またミスったので更新。今度こそうまくいくと信じる。もう何度目の正直だ？
+友人からサウナに誘われた。
+
+しかし人前で裸になるのはやっぱりどうしても抵抗がある。上半身だけならまだしも、全裸っていうのが羞恥の極みだ。しかし、彼からは何度もこの誘いを受けていて、断るたびに残念がっている。それだけサウナには魅力があるということなのだろう。
+
+経験したことはないし、食わず嫌いになっていると人生の幅が狭くなって損することになるから、これだけ何度も言われるなら試しに一回くらいは受けたほうが自分の人生にとってもいいんじゃないかなと思ったりもする。経験することで世界観が変わることがあるってよく聞くからね。それに、あんまり仲良くない人から誘われるならまだしも、気心知れた友人からの誘いだから、それを断ったらもう自分の人生の中でサウナを経験することは二度とないかもしれないということもあり、それはかなりもったいないかもしれないとも思う。仲の良い友人からの誘いだからこそ、正直嫌だなと思っていることでも経験するチャンスなんじゃないか？ とも思える。
+
+だから今回は、その誘いを受けてみることにした。その結果、なにか新しい発見があるかもしれないし、思っているほど人前で身体をさらすことに抵抗がないことに気づくかもしれないし、やっぱり嫌だということに気づくかもしれない。だけどそれも含めての「経験」だ。経験しなければ、そもそも本当に嫌いどうかもわからない。シュレディンガーの猫のように。ただ自分の妄想で思い込んでいるだけかもしれない。それを繰り返す人生は、きっと粗末なものになるだろう。だから今回はコンフォートゾーンから思い切って抜け出してみることにする。
